# gravatar-api-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
src/avatar/: default.rs  rating.rs
src/avatars/: default.rs  mod.rs  rating.rs
src/common/: mod.rs
src/profiles/: format.rs  mod.rs
